kyverno/P0004-pod-without-runasnonroot/policy-P0004.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-P0004
  annotations:
    policies.kyverno.io/title: Pod must run as non-root
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Force the running image to run as a non-root user to ensure least
      privilege
spec:
  validationFailureAction: audit
  rules:
    - name: pod-run-as-non-root
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Pod must run as non-root"
        anyPattern:
          - spec:
              securityContext:
                runAsNonRoot: true
              containers:
              - =(securityContext):
                  =(runAsNonRoot): true
              =(initContainers):
              - =(securityContext):
                  =(runAsNonRoot): true
          - spec:
              containers:
              - securityContext:
                  runAsNonRoot: true
              =(initContainers):
              - securityContext:
                  runAsNonRoot: true
